fix: Color section UI breaks on scroll

--- a/inc/customizer/custom-controls/assets/css/unminified/color-palette-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/color-palette-rtl.css
@@ -112,6 +112,7 @@
 
 #customize-control-astra-color-palettes .ast-color-palette-wrapper {
 	clear: both;
+    position: sticky;
 }
 
 #customize-control-astra-color-palettes .ast-palette-selection-wrapper {
