--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -661,6 +661,7 @@
 
 #customize-control-astra-color-palettes .ast-color-palette-wrapper {
 	clear: both;
+    position: sticky;
 }
 
 #customize-control-astra-color-palettes .ast-palette-selection-wrapper {
